--- a/app/views/rapidfire/answers/_checkbox.html.erb
+++ b/app/views/rapidfire/answers/_checkbox.html.erb
@@ -1,13 +1,18 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
-<div class="form-group">
+<div class="form-group check-box">
 <%= f.label :answer_text, answer.question.question_text %>
 <%= f.fields_for :answer_text do |af| %>
   <%- answer.question.options.each_with_index do |option, index| %>
     <%= af.label index do %>
       <%= af.check_box index, { checked: checkbox_checked?(answer, option) }, option %>
-      <%= option %>
+      <span class="checkmark"></span>
+       <div class="tooltip-div">
+      	<p class="label-tooltip-check"><%= option %> </p>
+       	<span class="label-tooltip-check-text">	<%= option %> </span>
+       </div>      
     <% end %>
   <% end %>
 <% end %>
 </div>
+
