--- a/app/views/rapidfire/surveys/_survey.html.erb
+++ b/app/views/rapidfire/surveys/_survey.html.erb
@@ -1,18 +1,20 @@
-<tr id= "survey_<%= survey.id %>">
-  <td>
-    <% if can_administer? %>
-      <%= link_to survey.name, survey_questions_path(survey) %>
-    <% else %>
-      <%= survey.name %>
-    <% end %>
-  </td>
-  <td>
-    <ul class="horizontal-list">
-      <li><%= link_to "Answer Questions", new_survey_attempt_path(survey) %></li>
+<div class="survey-attempt-form">
+  <tr id= "survey_<%= survey.id %>">
+    <td>
       <% if can_administer? %>
-        <li><%= link_to "Results", [:results, survey] %></li>
-        <li><%= link_to "Delete", survey, method: :delete %></li>
+        <%= link_to survey.name, survey_questions_path(survey) %>
+      <% else %>
+        <%= survey.name %>
       <% end %>
-    </ul>
-  </td>
-</tr>
+    </td>
+    <td>
+      <ul class="horizontal-list">
+        <li><%= link_to "Answer Questions", new_survey_attempt_path(survey) %></li>
+        <% if can_administer? %>
+          <li><%= link_to "Results", [:results, survey] %></li>
+          <li><%= link_to "Delete", survey, method: :delete %></li>
+        <% end %>
+      </ul>
+    </td>
+  </tr>
+</div>
