--- a/app/views/rapidfire/surveys/index.html.erb
+++ b/app/views/rapidfire/surveys/index.html.erb
@@ -1,16 +1,12 @@
-<h2>
-  Surveys
-</h2>
-<h3>
-  <% if can_administer? %>
+<div class="survey-attempt-form">
+<h2>Surveys</h2>
+<p class="survey-title"><% if can_administer? %>
     <%= link_to "New Survey", new_survey_path %>
   <% end %>
-</h3>
+</p>
 <h4>
   <%= link_to t('Back to home'), '/' %>
 </h4>
-<hr/>
-
 <table>
   <colgroup>
     <col>
@@ -26,7 +22,7 @@
     <%= render partial: "survey", collection: @surveys %>
   </tbody>
 </table>
-
+</div>
 <% if defined?(Kaminari) %>
   <%= paginate @surveys %>
 <% end %>
