UI changes on new surveys pages

--- a/app/views/rapidfire/questions/_question.html.erb
+++ b/app/views/rapidfire/questions/_question.html.erb
@@ -3,8 +3,8 @@
 	  <td><%= question.question_text %></td>
 	  <td>
 	    <ul class="horizontal-list">
-	      <li><%= link_to "Edit", [:edit, question.survey, question] %></li>
-	      <li><%= link_to "Delete", [question.survey, question], method: :delete %></li>
+	      <li><%= link_to "Edit", [:edit, question.survey, question], :class => "btn btn-default" %></li>
+	      <li><%= link_to "Delete", [question.survey, question], method: :delete, :class => "btn btn-default" %></li>
 	    </ul>
 	  </td>
 	</tr>
