--- a/app/views/rapidfire/surveys/index.html.erb
+++ b/app/views/rapidfire/surveys/index.html.erb
@@ -4,14 +4,8 @@
     <%= link_to "New Survey", new_survey_path %>
   <% end %>
 </p>
-<h4>
-  <%= link_to t('Back to home'), '/' %>
-</h4>
-<table>
-  <colgroup>
-    <col>
-    <col width="250">
-  </colgroup>
+<h4><%= link_to t('Back to home'), '/' %></h4>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Survey</th>
