PYR-21270, MNT-2492: Added helper 'attempted?' to identify whether a Survey is ever attempted in general or by a User. Also ajaxified the submission of the Survey.

--- a/app/views/rapidfire/attempts/new.html.erb
+++ b/app/views/rapidfire/attempts/new.html.erb
@@ -1,4 +1,4 @@
 <%
-  defined?(remote) or remote = false
+  defined?(remote) or remote = true
 %>
 <%= render partial: 'rapidfire/attempts/form', locals: { submit_text: t('rapidfire.attempts.save'), remote: remote } %>
