Allow HTML in question text

--- a/app/views/rapidfire/answers/_checkbox.html.erb
+++ b/app/views/rapidfire/answers/_checkbox.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
 <div class="form-group">
-<%= f.label :answer_text, answer.question.question_text %>
+<%= f.label :answer_text, answer.question.question_text.html_safe %>
 <%= f.fields_for :answer_text do |af| %>
   <%- answer.question.options.each_with_index do |option, index| %>
     <%= af.label index do %>
