--- a/app/views/rapidfire/questions/_form.html.erb
+++ b/app/views/rapidfire/questions/_form.html.erb
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <%= f.label :question_text %>
-    <%= f.text_field :question_text %>
+    <%= f.text_area :question_text, rows: 5 %>
   </div>
 
   <div class="form-group">
