--- a/app/views/rapidfire/answers/_radio.html.erb
+++ b/app/views/rapidfire/answers/_radio.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
 <div class="form-group">
-  <%= f.label :answer_text, answer.question.question_text %>
+  <%= f.label :answer_text, answer.question.question_text.html_safe %>
   <%- answer.question.options.each_with_index do |option, index| %>
     <span class="form-group sub">
       <%= f.label "answer_text_#{index}" do %>
