--- a/app/views/rapidfire/answers/_short.html.erb
+++ b/app/views/rapidfire/answers/_short.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 <div class="form-group">
-<%= f.label :answer_text, answer.question.question_text %>
+<%= f.label :answer_text, answer.question.question_text.html_safe %>
 <%= f.text_field :answer_text, value: answer.answer_text || answer.question.default_text, placeholder: answer.question.placeholder %>
 </div>
