--- a/app/views/rapidfire/attempts/edit.html.erb
+++ b/app/views/rapidfire/attempts/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: { submit_text: 'Update' } %>
+<%= render partial: 'form', locals: { submit_text: 'Update', method: :put } %>
