--- a/app/views/rapidfire/surveys/results.html.erb
+++ b/app/views/rapidfire/surveys/results.html.erb
@@ -1,34 +1,8 @@
 <h1>Results</h1>
 <%= link_to "Download CSV", results_survey_path(id: params[:id], format: :csv) %>
-<%- @survey_results.each do |result| %>
-  <div>
-    <h4><%= result.question.question_text %></h4>
-    <p>
-      <%- if result.results.is_a?(Array) %>
-        <ol>
-          <%- result.results.each do |answer| %>
-            <li><%= answer %></li>
-          <% end %>
-        </ol>
-      <% elsif result.results.is_a?(Hash) %>
-        <table>
-          <thead>
-            <tr>
-              <th>Option</th>
-              <th>Count</th>
-              <th>Filter</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%- result.results.each do |option, count| %>
-              <tr>
-                <td><%= option %></td>
-                <td><%= count %></td>
-                <td><%= filter_link(result.question.id, option) %></th>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      <% end %>
+<%- @survey_attempts.each do |attempt| %>
+  <div class="flex justify between">
+    <h4>User : <%= attempt.user_id %></h4>
+    <%= link_to "View Answers", survey_result_path(@survey, attempt.id) %>
   </div>
 <% end %>
